Set .signupbox div height to auto to prevent overflow of sign up form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ footer {
     flex-direction: column;
     width: 70vw;
     text-align: center;
+    font-size: larger;
 }
 
 /* Styling form labels */
@@ -314,7 +315,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 80vh;
     width: auto;
 }
 
@@ -323,14 +324,14 @@ footer {
     background-color: rgba(71, 108, 70, 0.8);
     color: antiquewhite;
     margin: 20px;
-    height: 55vh;
+    height: auto;
     width: 85vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-self: center;
     border-radius: 3%;
-    padding-top: 30px;
+    padding: 30px;
 }
 
 /* Set styles for newsletter preference checkboxes on signup.html */
